# hello-rt-midi

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  README.md  format.sh  miditest.maxpat
include/: MidiEvent.hpp  MidiListener.hpp
src/: MidiListener.cpp  main.cpp
